<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>4.0.6</version>
        <relativePath/>
    </parent>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>2025.1.2</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <groupId>com.ethlo.http</groupId>
    <artifactId>cloud-gateway</artifactId>
    <version>1.7.4-SNAPSHOT</version>
    <packaging>pom</packaging>
    <description>Spring Cloud Gateway powered reverse proxy</description>
    <modules>
        <module>cloud-gateway-core</module>
        <module>cloud-gateway-logger-clickhouse</module>
        <module>cloud-gateway-logger-file</module>
        <module>cloud-gateway-server</module>
        <module>cloud-gateway-resources-overlay</module>
    </modules>
    <properties>
        <java.version>25</java.version>
        <source.encoding>utf-8</source.encoding>
    </properties>
</project>
